implemented some methods in Corner, Game, Player and PlayerDesk classes